<resources>
    <string name="app_name">MShare</string>
    <string name="already_has_account_sign_in">Already has account? Sign in here</string>
    <string name="signup">SIGN UP</string>
    <string name="password">Enter your Password</string>
    <string name="username">Enter your Email</string>
    <string name="name">Enter your Name</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="login">LOGIN</string>
    <string name="create_new_account">Create new account</string>
    <string name="logout">Logout</string>
    <string name="facebook_app_id">1299644847186479</string>
    <string name="fb_login_protocol_scheme">fb1299644847186479</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="send_request">SEND REQUEST</string>
    <string name="avatar">avatar</string>
    <string name="chats">Chats</string>
    <string name="share">SHARE</string>
    <string name="end_sharing">END SHARING</string>
    <string name="profile">Profile</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="search">Search</string>
    <string name="open_chat">Open Chat</string>
    <string name="duration">-:--</string>
    <string name="favorites">FAVORITES</string>
    <string name="uploaded_songs">UPLOADED SONGS</string>
    <string name="songs">SONGS</string>
    <string name="artists">ARTISTS</string>
    <string name="genre">GENRE</string>
    <string name="enter_your_favorite_song_name">Enter Song Name</string>
    <string name="enter_artist_of_song">Enter Song Artist</string>
    <string name="enter_artist_name">Enter Artist Name</string>
    <string name="confirm">CONFIRM</string>
    <string name="cancel">CANCEL</string>
    <string name="view_profile">VIEW PROFILE</string>
    <string name="play">PLAY</string>
</resources>