<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/searchViewSong"
        android:title="@string/search_song"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/conversationList"
        android:title="@string/chats"
        android:icon="@drawable/ic_message"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/profilePage"
        android:title="@string/profile"
        android:icon="@drawable/ic_user"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/logout"
        android:title="@string/logout" />
</menu>