<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/email_login_group"
        android:text="@string/login"
        android:textSize="48sp"
        android:textColor="@color/white"
        android:layout_marginBottom="30dp"/>

    <LinearLayout
        android:id="@+id/email_login_group"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password_login_group"
        android:layout_centerHorizontal="true"
        android:paddingHorizontal="5dp"
        android:background="@drawable/border">

        <EditText
            android:id="@+id/email_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/username"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <TextView
            android:id="@+id/invalidEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_login_group"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginVertical="10dp"
        android:paddingHorizontal="5dp"
        android:background="@drawable/border">
        <EditText
            android:id="@+id/password_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <TextView
            android:id="@+id/invalidPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/toSignUp"
        android:layout_width="wrap_content"
        android:layout_below="@+id/password_login_group"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textStyle="italic|bold"
        android:onClick="goToSignUp"
        android:layout_marginVertical="10dp"
        android:textColor="@color/white"
        android:text="@string/create_new_account"
        android:textSize="18sp"/>

    <android.widget.Button
        android:id="@+id/btnLogin"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toSignUp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold" />


    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/facebook_login_button"
        android:layout_centerHorizontal="true"
        android:text="@string/continue_with_google"
        android:textSize="18sp" />

</RelativeLayout>