<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/name_signup_group"
        android:layout_marginBottom="30dp"
        android:text="@string/signup"
        android:textSize="48sp"
        android:textColor="@color/white"/>

    <LinearLayout
        android:id="@+id/name_signup_group"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email_signup_group"
        android:layout_centerHorizontal="true"
        android:paddingHorizontal="5dp"
        android:background="@drawable/border">

        <EditText
            android:id="@+id/name_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <TextView
            android:id="@+id/invalidName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_signup_group"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/password_signup_group"
        android:layout_marginVertical="10dp"
        android:layout_centerHorizontal="true"
        android:paddingHorizontal="5dp"
        android:background="@drawable/border">

        <EditText
            android:id="@+id/email_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/username"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <TextView
            android:id="@+id/invalidEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_signup_group"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginVertical="10dp"
        android:paddingHorizontal="5dp"
        android:background="@drawable/border">

        <EditText
            android:id="@+id/password_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <TextView
            android:id="@+id/invalidPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_confirm_signup_group"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_signup_group"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="10dp"
        android:paddingHorizontal="5dp"
        android:background="@drawable/border">

        <EditText
            android:id="@+id/password_confirm_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password_confirm"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <TextView
            android:id="@+id/invalidPasswordConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/toLogin"
        android:layout_width="wrap_content"
        android:layout_below="@+id/password_confirm_signup_group"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="10dp"
        android:textStyle="italic|bold"
        android:textColor="@color/white"
        android:text="@string/already_has_account_sign_in"
        android:textSize="18sp"/>

    <android.widget.Button
        android:id="@+id/btnSignUp"
        android:layout_width="221dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toLogin"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textStyle="bold" />

</RelativeLayout>