<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MediaPlayerActivity">

    <ImageView
        android:id="@+id/imageCoverMedia"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:layout_marginBottom="12dp"
        android:background="@color/white"
        android:padding="5dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/textSong"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/seekBarDuration"
        android:layout_width="350dp"
        android:layout_height="17dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSong" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="76dp"
        android:layout_height="74dp"
        android:layout_marginTop="32dp"
        android:background="@null"
        android:onClick="manageAudio"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarDuration"
        app:srcCompat="@drawable/play" />

    <ImageButton
        android:id="@+id/imageButtonPrev"
        android:layout_width="76dp"
        android:layout_height="74dp"
        android:layout_marginTop="32dp"
        android:background="@null"
        android:onClick="previousSong"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarDuration"
        app:srcCompat="@drawable/previous" />

    <ImageButton
        android:id="@+id/imageButtonNext"
        android:layout_width="76dp"
        android:layout_height="74dp"
        android:layout_marginTop="32dp"
        android:background="@null"
        android:onClick="nextSong"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toBottomOf="@+id/seekBarDuration"
        app:srcCompat="@drawable/next" />

    <TextView
        android:id="@+id/textViewDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="4dp"
        android:text="@string/duration"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/seekBarDuration"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewTotalDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/duration"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/seekBarDuration"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:text="/"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/seekBarDuration"
        app:layout_constraintStart_toEndOf="@+id/textViewDuration" />

    <TextView
        android:id="@+id/textSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewTotalDuration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSong"
        app:layout_constraintVertical_bias="0.461" />

    <android.widget.Button
        android:id="@+id/share_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:onClick="onShare"
        android:text="@string/share"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <LinearLayout
        android:id="@+id/share_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        tools:layout_editor_absoluteX="0dp"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <android.widget.Button
            android:id="@+id/end_share_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:onClick="onEndShare"
            android:text="@string/end_sharing"
            android:textColor="@color/white"
            android:visibility="visible"
            android:padding="10dp"/>

        <android.widget.Button
            android:id="@+id/chat_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/border"
            android:drawableStart="@drawable/ic_message"
            android:drawablePadding="2dp"
            android:onClick="goToChat"
            android:text="@string/open_chat"
            android:textColor="@color/white"
            android:padding="10dp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>